# gamblers-ruin

./: .gitignore  README.md  dune-project  gamblers_ruin.opam
.claude/: CLAUDE.md
.claude/agents/: math-concept-docs.md  ocaml-implementer.md  probability-math-reviewer.md  senior-code-reviewer.md  test-author.md
.github/workflows/: ci.yml
lib/: analytic.ml  analytic.mli  dune  engine.ml  engine.mli  simulate.ml  simulate.mli  walk.ml  walk.mli
openspec/changes/archive/2026-06-13-add-claude-md-simplicity-directives/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-add-tests-and-ci/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-scaffold-repository/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-tidy-agent-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-implement-gamblers-ruin-math/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-refine-code-comment-guidance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-tidy-loose-ends/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-tidy-review-findings/: design.md  proposal.md  tasks.md
openspec/specs/agent-configuration/: spec.md
openspec/specs/automated-testing/: spec.md
openspec/specs/continuous-integration/: spec.md
openspec/specs/contribution-guidelines/: spec.md
openspec/specs/gamblers-ruin-computations/: spec.md
openspec/specs/repository-scaffold/: spec.md
test/: dune  test_gamblers_ruin.ml
(+12 files in other folders)
